added support for backflowing data to sibling shipments